# Orbit

./: CMakeLists.txt  OrbitDriver  README.md  Satellite.h  Universe.h  main.cpp  plotTrajectory.m
Analysis/: plotSimple.m
Analysis/Gatherers/: Gatheres.h
Analysis/matlabscripts/: StratsVsDuration.m  geoStationary  geoStationary.m  hohmannTransfer  hohmannTransfer.m  plotSimple.m  plotTrajectory.m
Optimization/: Cmaes.h  ParallelDriver.h
Report/: Intro.tex  MarsMission.tex  Theory.aux  Theory.tex  bibliography.bib  main.aux  main.bcf  main.blg  main.out  main.ptc  main.run.xml  main.tex  main.toc  makefile  structure.tex
Report/Pictures/: head1.xcf  head2.xcf
Testing/: OptimizationTesting.cpp
gphysics/: Mission.h  Planet.h  Satellite.h  Universe.h  Utilities.h
gphysics/IntegrationPolicies/: EulerMethodIntegration.h  LeapfrogIntegration.h
